[B]Version 2.5.1[/B]
- Fixed playwire links, thanks to jchirag0221 for fix. 

[B]Version 2.5.0[/B]
- vshare video source added for Pogo channel. 

[B]Version 2.4.6 - 2.4.9[/B]
- Cloud video source added. 

[B]Version 2.4.5[/B]
- Favorites images search fixed. 

[B]Version 2.4.4[/B]
- Preferred video source list modified: Dailymotion is on top. 

[B]Version 2.4.3[/B]
- Preferred video source list modified: Playwire is on top. 

[B]Version 2.4.2[/B]
- Lazy-Loading is made optional and disabled by default. 

[B]Version 2.4.1[/B]
- Lazy-Loading of video steaming URL: resolving streaming URL when played. 

[B]Version 2.4.0[/B]
- Added 9X channels. Major release.

[B]Version 2.3.4[/B]
- Fixed a major issue of parsing desirulez webpages.

[B]Version 2.3.3[/B]
- Rebuilt package.

[B]Version 2.3.2[/B]
- Fixed Blackie skin for add-on.

[B]Version 2.3.1[/B]
- Forgot to hide new help statement.

[B]Version 2.3.0[/B]
- Added new font independent of XBMC skin font.

[B]Version 2.2.9[/B]
- Stripped "Download" word.

[B]Version 2.2.8[/B]
- Added new theme "Summer". Can be changed using Settings.

[B]Version 2.2.7[/B]
- UI changes to enhance the clarity.

[B]Version 2.2.6[/B]
- Corrected favorites image resolution logic.

[B]Version 2.2.5[/B]
- Added Bajao from EROSNOW.com.

[B]Version 2.2.4[/B]
- Fix for high quality stream in auto play.

[B]Version 2.2.3[/B]
- Added new video stream resolvers.

[B]Version 2.2.2[/B]
- Added Movies channel.

[B]Version 2.2.1[/B]
- Added Awards & Concerts channel.

[B]Version 2.2.0[/B]
- Tweaks in UI.

[B]Version 2.1.9[/B]
- Fix for newly added video link desiserials.tv.
- Fix for desirulez.net TV episodes pagination.

[B]Version 2.1.8[/B]
- TV Show episodes list animation removed to fix mouse issue.

[B]Version 2.1.7[/B]
- Tweaked few UI looks to make it better just for fun.

[B]Version 2.1.6[/B]
- Added finished TV Shows, enabled if set in settings.

[B]Version 2.1.5[/B]
- Added TV Show label on focused favorite.