@@ -1,3 +1,9 @@
+[B]Version 2.5.3[/B]
+- Fixed playwire link for movies. 
+
+[B]Version 2.5.2[/B]
+- Fixed playwire links and sony PAL, thanks to jchirag0221 for fix. 
+
 [B]Version 2.5.1[/B]
 - Fixed playwire links, thanks to jchirag0221 for fix. 
 
